feat: Added cp, create and destroy to swagger, openapi.
